@@ -1,3 +1,12 @@
+2025-12-01T00:56:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19807709237 # 825
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 249 283 / 253 287
+* notice: next accum: outdated-unq outdated-all / unq all: 250 284 / 253 287
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-16] / []
+
 2025-11-28T00:43:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19750877032 # 822
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
